--- a/src/main/view.html
+++ b/src/main/view.html
@@ -1,2 +1,16 @@
-<h1>{{.Title}}</h1>
-{{ printf "%s" .Render}}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>{{.Title}}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="/css/style.css" rel="stylesheet" media="screen">
+</head>
+	<body>
+		<h1>{{.Title}}</h1>
+		{{ printf "%s" .Render}}
+	</body>
+	
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+</html>
