--- a/src/main/edit.html
+++ b/src/main/edit.html
@@ -1,35 +1,21 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		
-	</head>
+<head>
+	<title>Home</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="/css/style.css" rel="stylesheet" media="screen">
+</head>
 	<body>
 		<h1>Editing {{.Title}}</h1>
 
 		<form action="/save/{{.Title}}" method="POST">
-			<div><textarea id="body" name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
-			<div><input type="submit" value="Save"></div>
+			<div><textarea class="form-control" id="body" name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
+			<div><input type="submit" class="btn btn-primary" value="Save"></div>
 		</form>
 	</body>
-
+	
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script type="text/javascript">
-		$(document).delegate('#body', 'keydown', function(e) {
-		  var keyCode = e.keyCode || e.which;
-
-		  if (keyCode == 9) {
-		    e.preventDefault();
-		    var start = $(this).get(0).selectionStart;
-		    var end = $(this).get(0).selectionEnd;
-
-		    // set textarea value to: text before caret + tab + text after caret
-		    $(this).val($(this).val().substring(0, start)
-		                + "\t"
-		                + $(this).val().substring(end));
-
-		    // put caret at right position again
-		    $(this).get(0).selectionStart = 
-		    $(this).get(0).selectionEnd = start + 1;
-		  }
-		});
-	</script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/tabFix.js"></script>
 </html>
