--- a/src/main/home.html
+++ b/src/main/home.html
@@ -4,12 +4,13 @@
 	<title>Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="css/bootstrap-glyphicons.css" rel="stylesheet" media="screen">
 	<link href="css/style.css" rel="stylesheet" media="screen">
 </head>
 	<body>
 		<h1>Blog Pages</h1>
 		{{range $p := .Pages}}
-		<p>{{$p}} <a href="/view/{{$p}}">view</a> | <a href="/edit/{{$p}}">edit</a></p>
+		<p>{{$p}} <a href="/view/{{$p}}"><span class="glyphicon glyphicon-eye-open"></span> view</a> | <a href="/edit/{{$p}}"><span class="glyphicon glyphicon-pencil"></span> edit</a></p>
 		{{end}}
 	</body>
 	
