--- a/src/main/edit.html
+++ b/src/main/edit.html
@@ -7,12 +7,14 @@
 	<link href="/css/style.css" rel="stylesheet" media="screen">
 </head>
 	<body>
-		<h1>Editing {{.Title}}</h1>
+		<div class="container">
+			<h1>Editing {{.Title}}</h1>
 
-		<form action="/save/{{.Title}}" method="POST">
-			<div><textarea class="form-control" id="body" name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
-			<div><input type="submit" class="btn btn-primary" value="Save"></div>
-		</form>
+			<form action="/save/{{.Title}}" method="POST">
+				<div><textarea class="form-control" id="body" name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
+				<div><input type="submit" class="btn btn-primary" value="Save"></div>
+			</form>
+		</div>
 	</body>
 	
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
